fixed header display on small screens

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -53,7 +53,7 @@ img {
 /*small*/
 @media (min-width: 576px){
     h1 {
-        font-size: 40px;
+        font-size: 32px;
     }
     #visual-design-h   {
         text-align: right;
